--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fileseek",
-  "version": "1.0.2",
-  "description": "Search files recursively based on a regular expression",
+  "name": "fileseek_plus",
+  "version": "1.0.3",
+  "description": "Search files recursively or non-recurvively based on a regular expression",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/diogoeichert/fileseek.git"
+    "url": "git+https://github.com/mitras2/fileseek.git"
   },
   "keywords": [
     "file",
@@ -23,9 +23,9 @@
   "author": "Diogo Eichert, L. Hermann",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/diogoeichert/fileseek/issues"
+    "url": "https://github.com/mitras2/fileseek/issues"
   },
-  "homepage": "https://github.com/diogoeichert/fileseek#readme",
+  "homepage": "https://github.com/mitras2/fileseek#readme",
   "devDependencies": {
     "@types/node": "^14.0.5",
     "typescript": "^3.9.3"
